<resources>
    <string name="app_name">SUST Navigator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_error">Invalid Name</string>
    <string name="password_error">Password must be at least 6 digit long</string>
    <string name="email_error">Invalid Email</string>
    <string name="reg_no_error">Invalid Registration Number</string>
    <string name="dept_error">Invalid Department Name</string>
    <string name="dept_code_error">Invalid Department Code</string>
    <string name="course_code_error">Please enter a valid course code</string>
    <string name="course_title_error">Please enter a valid course title</string>
    <string name="course_credit_error">Please enter a valid course credit</string>
    <string name="home_title">SUST Navigator</string>
    <string name="teacher_search_hint">Name, Designation, Room No</string>
    <string name="course_search_hint">Code, Title, Credit</string>
    <string name="dept_search_hint">Dept Code, Dept Title</string>
    <string name="copyright_msg">\u00A9 Department of CSE, SUST</string>
    <string name="tired_dev">The developer was too tired to help you!! Want to Help Him?</string>
    <string name="contribute_git"><b>Contribute on GitHub</b></string>
    <string name="copyright">Copyright &#169; Dept. of CSE, SUST</string>
    <string name="design_developer_header">Designed, Developed and Maintain by </string>
    <string name="supervisor_header">Supervised by </string>
    <string name="design_developer_desc">Undergraduate Student\nDepartment of CSE, SUST\n2014-15 Session</string>
    <string name="sup1_desc">Assistant Professor\nDept of CSE, SUST</string>
    <string name="sup2_desc">Lecturer\nDept. of CSE, SUST</string>
    <string name="rate_header">Love SUST Navigator?</string>
    <string name="rate_playstore">Rate on Play Store</string>
    <string name="rate_github">Star on GitHub</string>
    <string name="find_on">Find Me On</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="cgpa">
        <item>F</item>
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
    </string-array>

    <string-array name="designation">
        <item>Choose a Designation</item>
        <item>Head Of Department</item>
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Lecturer</item>
    </string-array>

    <string-array name="designation_for_proctor">
        <item>Choose a Designation</item>
        <item>Proctor</item>
        <item>Assistant Proctor</item>
    </string-array>

    <string-array name="semester_list">
        <item>Choose a Semester</item>
        <item>1st Year 1st Semester</item>
        <item>1st Year 2nd Semester</item>
        <item>2nd Year 1st Semester</item>
        <item>2nd Year 2nd Semester</item>
        <item>3rd Year 1st Semester</item>
        <item>3rd Year 2nd Semester</item>
        <item>4th Year 1st Semester</item>
        <item>4th Year 2nd Semester</item>
        <item>5th Year 1st Semester</item>
        <item>5th Year 2nd Semester</item>
        <item>Optionals</item>
    </string-array>

    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="syllabus">Syllabus</string>
    <string name="department">Department</string>
    <string name="signup_done">Your request is received. Please be patient. Once your request is approved you will be an admin</string>
    <string name="email_exists">The email you tried is already in use. Please try a different one.</string>

    <string name="act_as_admin">Admin is not listening? Try as Local Admin</string>
    <string name="tap_to_add_semester">Tap the + Button to add new semeser</string>
    <string name="no_course_found">Sorry!! No course record found</string>
    <string name="create_backup">Backup Data To Cloud</string>
    <string name="restore_backup">Restore Data From Cloud</string>
    <string name="sign_out">Sign Out</string>
    <string name="dummy_room">Room no: 324, Department of Computer Science and Engineering, Dr. M. A. Wazed Miah IICT Building, Shahjalal University of Science and Technology, Sylhet-3114</string>
    <string name="dummy_phone">+8801965036172</string>
    <string name="dummy_email">shadat.tonmoy@gmail.com</string>
    <string name="following_faculty">Following Faculty List is Found</string>
    <string name="internet_required">You need one time connection only. Once the data is loaded from server it will be available offline. Please check your connection and try again</string>
</resources>
