<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="Custom Toolbar"
        android:titleTextColor="#ffffff"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="SUST Navigator"
                        android:textColor="@color/textBlack"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/copyright_msg"
                        android:textColor="@color/textBlack"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView20" />

                </android.support.constraint.ConstraintLayout>




            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/design_developer_header"
                        android:textColor="@color/textBlack"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView23"
                        app:srcCompat="@drawable/dev" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:text="Shadat Tonmoy"
                        android:textSize="16sp"
                        android:textColor="@color/textBlack"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/design_developer_desc"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="@+id/textView22"
                        app:layout_constraintStart_toStartOf="@+id/textView22"
                        app:layout_constraintTop_toBottomOf="@+id/textView22" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textBlack"
                        android:text="@string/find_on"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView24" />

                    <ImageView
                        android:id="@+id/github_link"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/textView24"
                        app:layout_constraintTop_toBottomOf="@+id/textView26"
                        app:srcCompat="@drawable/github" />

                    <ImageView
                        android:id="@+id/linkedin_link"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/github_link"
                        app:layout_constraintTop_toBottomOf="@+id/textView26"
                        app:srcCompat="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/fb_link"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView24"
                        app:layout_constraintStart_toEndOf="@+id/linkedin_link"
                        app:srcCompat="@drawable/fb" />

                </android.support.constraint.ConstraintLayout>




            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/supervisor_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/supervisor_header"
                        android:textColor="@color/textBlack"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/sup1_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/supervisor_header"
                        app:srcCompat="@drawable/sup1" />

                    <TextView
                        android:id="@+id/sup1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="Biswapriyo Chakrabarty"
                        android:textColor="@color/textBlack"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sup1_image" />

                    <TextView
                        android:id="@+id/sup1_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/sup1_desc"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sup1_name" />


                    <ImageView
                        android:id="@+id/sup2_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/supervisor_header"
                        app:srcCompat="@drawable/sup2" />

                    <TextView
                        android:id="@+id/sup2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Enamul Hassan"
                        android:textColor="@color/textBlack"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sup1_image" />

                    <TextView
                        android:id="@+id/sup2_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textAlignment="textEnd"
                        android:text="@string/sup2_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sup2_name" />

                </android.support.constraint.ConstraintLayout>




            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/rate_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/rate_header"
                        android:textColor="@color/textBlack"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                    <TextView
                        android:id="@+id/rate_playstore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/rate_playstore"
                        android:textColor="@color/textBlack"
                        android:drawableLeft="@drawable/playstore_mini"
                        android:gravity="center"
                        android:drawablePadding="8dp"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rate_header" />


                    <TextView
                        android:id="@+id/rate_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/rate_github"
                        android:textColor="@color/textBlack"
                        android:drawableLeft="@drawable/github_small"
                        android:gravity="center"
                        android:drawablePadding="8dp"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rate_playstore" />



                </android.support.constraint.ConstraintLayout>




            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>





</RelativeLayout>